# team-ops-assistant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  configuration.yaml  env.example  nixpacks.toml  plan-timezoneSignalDetection.prompt.md  pyproject.toml  pyrightconfig.json  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  run.sh
.claude/: settings.json
data/: DATASET_README.md  location_change_trigger.pkl  time_classifier.pkl  time_extraction_control.csv  time_extraction_real_messages.csv  time_extraction_train.csv  timezone_signals_train.csv  tz_context_trigger.pkl  tz_context_trigger_test.csv  tz_context_trigger_train.csv  tz_context_trigger_validation.csv  tz_location_change_test.csv  tz_location_change_train.csv
docs/: API.md  ARCHITECTURE.md  ONBOARDING.md  RUNBOOK.md  VISION.md
journal/: 01_scope_assumptions.md  02_repo_structure_and_quality_gates.md  03_audit_report.md  04_time_detection_baseline.md  05_refactoring_lessons.md  06_mention_trigger_ux.md  07_dynamic_timezone_list.md  08_llm_provider_decision.md  PROGRESS.md
prompts/: agent_geo_intent.md  agent_timezone.md  city_normalize.md  format_reply.md  geo_classify.md  parse_time.md  timezone_resolve.md  trigger_detect.md
scripts/: analyze_thresholds.py  check_dataset_stats.py  debug_classifier.py  eval_tz_trigger.py  eval_tz_trigger_quality.py  generate_location_change_datasets.py  generate_synthetic_tz_data.py  generate_tz_context_datasets.py  test_edge_cases.py  test_llm_on_failures.py  test_time_parse.py  train_location_trigger.py
(+132 files in other folders)
